<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android" >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/img_6"
        tools:context=".Temperatura">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:backgroundTint="@color/blue"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/temperatura"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/valorTemperatura"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:background="@color/white"
            android:ems="10"
            android:gravity="center"
            android:hint="Digite a temperatura"
            android:inputType="numberSigned"
            android:padding="10dp"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titulo" />

        <RadioGroup
            android:id="@+id/grupoRadio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/valorTemperatura"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="195dp">


            <RadioButton
                android:id="@+id/radioCPF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cpf"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioFPC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fpc"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RadioGroup>


        <TextView
            android:id="@+id/saida"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:background="#3CCC4343"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/grupoRadio" />


        <Button
            android:id="@+id/buttonTemp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:text="@string/calculo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/saida"
            tools:layout_editor_absoluteX="139dp"
            tools:layout_editor_absoluteY="537dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>